--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,16 +3,21 @@ name: CI/CD
 on:
   push:
     branches:
-      - main
+      - main  # Trigger on commits to main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v6
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
+      # Step 1: Checkout code from main branch
+      - uses: actions/checkout@v3
+
+      # Step 2: Deploy to GitHub Pages (gh-pages branch)
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./       # Deploy all files in root
+          publish_branch: gh-pages  # <-- Important: deploys to gh-pages branch
+          force_orphan: true       # <-- Ensures clean deployment
